fix(list): empty sticky header has a wrong height

--- a/packages/fluent/scss/list/_layout.scss
+++ b/packages/fluent/scss/list/_layout.scss
@@ -116,6 +116,7 @@
         }
     }
     .k-list-item-text,
+    .k-list-header-text,
     .k-list-optionlabel {
         &::before {
             content: "\200b";
